--- a/html/index.html
+++ b/html/index.html
@@ -9,38 +9,42 @@
 </head>
 
 <body>
-    <nav>
-        <a href=""><img src="/images/logo.svg" alt="" class="nav__logo"></a>
-        <ul class="nav__right__top">
-            <a href="">
-                <li>Upload</li>
-            </a>
-            <a href="">
-                <li>Bonus (9)</li>
-            </a>
-            <a href="">
-                <li>Invite</li>
-            </a>
-            <a href="">
-                <li>Donate (26%)</li>
-            </a>
-            <a href="">
-                <li>Staff</li>
-            </a>
-        </ul>
-        <ul class="nav__right__bottom">
-            <a href="">
-                <li>Up: 3.00 GiB</li>
-            </a>
-            <a href="">
-                <li>Down: 4.79 GiB</li>
-            </a>
-            <a href="">
-                <li>Ratio: 0.62</li>
-            </a>
+    <div class="wrapper">
+        <nav>
+            <a href=""><img src="/images/logo.svg" alt="" class="nav__logo"></a>
+            <div class="nav__right">
+                <ul class="nav__right__top">
+                    <a href="">
+                        <li>Upload</li>
+                    </a>
+                    <a href="">
+                        <li>Bonus (9)</li>
+                    </a>
+                    <a href="">
+                        <li>Invite</li>
+                    </a>
+                    <a href="">
+                        <li>Donate (26%)</li>
+                    </a>
+                    <a href="">
+                        <li>Staff</li>
+                    </a>
+                </ul>
+                <ul class="nav__right__bottom">
+                    <a href="">
+                        <li>Up: 3.00 GiB</li>
+                    </a>
+                    <a href="">
+                        <li>Down: 4.79 GiB</li>
+                    </a>
+                    <a href="">
+                        <li>Ratio: 0.62</li>
+                    </a>
 
-        </ul>
-    </nav>
+                </ul>
+            </div>
+        </nav>
+    </div>
 </body>
 
 </html>
