Add navigation and styling

--- a/html/index.html
+++ b/html/index.html
@@ -10,10 +10,10 @@
 
 <body>
     <div class="wrapper">
-        <nav>
+        <header>
             <a href=""><img src="/images/logo.svg" alt="" class="nav__logo"></a>
-            <div class="nav__right">
-                <ul class="nav__right__top">
+            <div class="header__right">
+                <ul class="header__right__top">
                     <a href="">
                         <li>Upload</li>
                     </a>
@@ -30,7 +30,7 @@
                         <li>Staff</li>
                     </a>
                 </ul>
-                <ul class="nav__right__bottom">
+                <ul class="header__right__bottom">
                     <a href="">
                         <li>Up: 3.00 GiB</li>
                     </a>
@@ -43,7 +43,7 @@
 
                 </ul>
             </div>
-        </nav>
+        </header>
     </div>
 </body>
 
