--- a/html/index.html
+++ b/html/index.html
@@ -44,6 +44,48 @@
                 </ul>
             </div>
         </header>
+        <ul class="nav">
+            <a href="">
+                <li>Torrents</li>
+            </a>
+            <a href="">
+                <li>Collages</li>
+            </a>
+            <a href="">
+                <li>Requests</li>
+            </a>
+            <a href="">
+                <li>Forums</li>
+            </a>
+            <a href="">
+                <li>IRC</li>
+            </a>
+            <a href="">
+                <li>Top 10</li>
+            </a>
+            <a href="">
+                <li>Rules</li>
+            </a>
+            <a href="">
+                <li>Wiki</li>
+            </a>
+            <a href="">
+                <li>Addie</li>
+            </a>
+            <a href="">
+                <li><img src="" alt=""></li>
+            </a>
+
+        </ul>
+        <ul class="nav-2">
+            <li><input type="text" placeholder="Torrents"></li>
+            <li><input type="text" placeholder="Artists"></li>
+            <li><input type="text" placeholder="Collages"></li>
+            <li><input type="text" placeholder="Requests"></li>
+            <li><input type="text" placeholder="Forums"></li>
+            <li><input type="text" placeholder="Logs"></li>
+            <li><input type="text" placeholder="Users"></li>
+        </ul>
     </div>
 </body>
 
