Add Latest Uploads and AOTM sections

--- a/html/index.html
+++ b/html/index.html
@@ -86,6 +86,35 @@
             <li><input type="text" placeholder="Logs"></li>
             <li><input type="text" placeholder="Users"></li>
         </ul>
+        <div class="latest-section">
+            <h2>Latest Uploads</h2>
+            <a href=""><img src="/images/album1.jpg" alt=""></a>
+            <a href=""><img src="/images/album2.jpg" alt=""></a>
+            <a href=""><img src="/images/album3.jpg" alt=""></a>
+            <a href=""><img src="/images/album4.jpg" alt=""></a>
+            <a href=""><img src="/images/album2.jpg" alt=""></a>
+        </div>
+        <main>
+            <section class="aotm">
+                <div class="aotm-header">
+                    <div class="left">
+                        AoTM April Round 1 Winner & Round 2 Voting Open 4 days, 9 hours ago
+                    </div>
+                    <div class="right">
+                        [Hide]
+                    </div>
+                </div>
+                <div class="aotm-main">
+                    <img src="/images/album6.jpeg" alt="" width="200px">
+                    <p>AoTM April Round 1 has closed and we have a winner!</p>
+                    <p>AoTM April Round 1 Winner - The Devil and The Almighty Blues</p>
+                    <p>Congratulations to Unkn0wnUs3r for their winning pick. 20,000 Bonus Points have been added to
+                        your account.</p>
+                    <p>This album will be Freeleech for two weeks (FLAC only)</p>
+
+                </div>
+            </section>
+        </main>
     </div>
 </body>
 
